--- a/app/src/main/res/layout/fragment_view_content.xml
+++ b/app/src/main/res/layout/fragment_view_content.xml
@@ -12,13 +12,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
-                android:id="@+id/view_content_content"
+                android:id="@+id/view_content_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text=""
+                android:textColor="@color/black"
                 android:textSize="20dp" />
 
         </LinearLayout>
