--- a/app/src/main/res/layout/fragment_view_index.xml
+++ b/app/src/main/res/layout/fragment_view_index.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.Theme.Facade.ContainerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.view.index.ViewIndexFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/view_index_scroll_view"
+        style="@style/Widget.Theme.Facade.ContainerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            style="@style/Widget.Theme.Facade.ContainerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -18,23 +21,24 @@
 
             <TextView
                 android:id="@+id/view_index_show_content"
+                style="@style/Widget.Theme.Facade.ContentView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Show Content"
-                android:textColor="@color/black"
                 android:textSize="40dp" />
 
             <TextView
                 android:id="@+id/view_index_description"
+                style="@style/Widget.Theme.Facade.ContentView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="description"
-                android:textColor="@color/black"
                 android:textSize="20dp" />
 
             <com.pigeonligh.facade.common.list.BaseList
                 android:id="@+id/view_index_children"
+                style="@style/Widget.Theme.Facade.ContainerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
