--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_container"
+    style="@style/Widget.Theme.Facade.ContainerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        style="@style/Widget.Theme.Facade.ContainerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
@@ -18,6 +20,7 @@
         <fragment
             android:id="@+id/nav_view_fragment_activity_view"
             android:name="androidx.navigation.fragment.NavHostFragment"
+            style="@style/Widget.Theme.Facade.ContainerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
