--- a/app/src/main/res/layout/component_view_ref_list_item.xml
+++ b/app/src/main/res/layout/component_view_ref_list_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.Theme.Facade.ContainerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
+        style="@style/Widget.Theme.Facade.ContainerView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_weight="1"
@@ -12,14 +14,12 @@
 
         <TextView
             android:id="@+id/view_reflistitem_title"
+            style="@style/Widget.Theme.Facade.ContentView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
             android:text="TextView"
-            android:textColor="@color/black"
             android:textSize="30dp" />
     </LinearLayout>
-
-
 </LinearLayout>
