--- a/app/src/main/res/layout/fragment_view_content.xml
+++ b/app/src/main/res/layout/fragment_view_content.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.Theme.Facade.ContainerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.view.content.ViewContentFragment">
 
     <ScrollView
+        style="@style/Widget.Theme.Facade.ContainerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
+            style="@style/Widget.Theme.Facade.ContainerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -17,10 +20,10 @@
 
             <TextView
                 android:id="@+id/view_content_view"
+                style="@style/Widget.Theme.Facade.ContentView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text=""
-                android:textColor="@color/black"
+                android:text="hello wrold"
                 android:textSize="20dp" />
 
         </LinearLayout>
