--- a/app/src/main/res/layout/fragment_view_loading.xml
+++ b/app/src/main/res/layout/fragment_view_loading.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.Theme.Facade.ContainerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.view.loading.ViewLoadingFragment">
 
     <TextView
+        style="@style/Widget.Theme.Facade.ContentView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
