--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,6 +1,10 @@
 <resources>
 
-    <style name="Widget.Theme.Facade.MyView" parent="">
-        <item name="android:background">@color/gray_600</item>
+    <style name="Widget.Theme.Facade.ContainerView" parent="">
+        <item name="android:background">@color/dark</item>
+    </style>
+
+    <style name="Widget.Theme.Facade.ContentView" parent="">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
